# filesystem_analyzer

./: CMakeLists.txt  README.md  README.txt
include/: analyzer.hpp
pdf_scanner/: CMakeLists.txt  README.md
pdf_scanner/include/: types.h
pdf_scanner/rules/: pdf_malware.yar
pdf_scanner/src/: main.cpp  pdf_scanner.cpp  pdf_scanner.h  yara_wrapper.cpp  yara_wrapper.h
rules/: basic.yar
src/: analyzer.cpp  analyzer.hpp  main.cpp  scanner.cpp  scanner.hpp
test/: run_functional_tests.sh
test_data/: generate_test_data.sh
